Fixed overflow buttons

--- a/buttons/sass/styles.scss
+++ b/buttons/sass/styles.scss
@@ -31,17 +31,18 @@ button::-moz-focus-inner {
     margin: 1rem;
     background: none;
     border-style: solid;
-    border-radius: 2rem;  
     font-weight: 700;
+
+    overflow: hidden;
 
     transition: color .5s;
 
-    &.btn__black {
+    &.btn--black {
         border-color: black;
         color: black;
     }
 
-    &.btn__color {
+    &.btn--blue {
         border-color: $blue;
         color: $blue;
     }
@@ -49,13 +50,12 @@ button::-moz-focus-inner {
     &.btn__first::before {
         content: "";
         width: 0%;
-        height: 101%;
+        height: 100%;
         position: absolute;
-        top: -1%;
+        top: 0;
         left: 50%;
 
         border-color: black;
-        border-radius: 2rem;
 
         z-index: -1;
 
@@ -63,12 +63,12 @@ button::-moz-focus-inner {
         transition-duration: .5s, .5s;
     }
 
-    &.btn__first-black::before {
+    &.btn__first--black::before {
         background: black;
         border-color: black;
     }
 
-    &.btn__first-blue::before {
+    &.btn__first--blue::before {
         background: $blue;
         border-color: $blue;
     }
@@ -79,32 +79,30 @@ button::-moz-focus-inner {
     }
 
     &.btn__first:hover::before {
-        width: 103%;
-        left: -1%;
+        width: 100%;
+        left: 0%;
     }
 
     &.btn__second::before {
         content: "";
-        width: 103%;
+        width: 100%;
         height: 0%;
         position: absolute;
         top: 50%;
-        left: -1%;
-        border-radius: 2rem;
+        left: 0;
 
         z-index: -1;
 
         transition-property: height, top;
         transition-duration: .5s, .5s;
-
     }
 
-    &.btn__second-black::before {
+    &.btn__second--black::before {
         background: black;
         border-color: black;
     }
 
-    &.btn__second-blue::before {
+    &.btn__second--blue::before {
         background: $blue;
         border-color: $blue;
     }
@@ -114,8 +112,8 @@ button::-moz-focus-inner {
     }
 
     &.btn__second:hover::before {
-        height: 101%;
-        top: -1%;
+        height: 100%;
+        top: 0;
     }
 
     &.btn__third::before {
@@ -129,7 +127,6 @@ button::-moz-focus-inner {
         transform: translate(-50%, -50%);
 
         border-color: black;
-        border-radius: 2rem;
 
         z-index: -1;
 
@@ -137,12 +134,12 @@ button::-moz-focus-inner {
         transition-duration: .5s, .5s;
     }
 
-    &.btn__third-black::before {
+    &.btn__third--black::before {
         background: black;
         border-color: black;
     }
 
-    &.btn__third-blue::before {
+    &.btn__third--blue::before {
         background: $blue;
         border-color: $blue;
     }
@@ -152,7 +149,7 @@ button::-moz-focus-inner {
     }
 
     &.btn__third:hover::before {
-        width: 104%;
-        height: 102%;
+        width: 100%;
+        height: 100%;
     }
 }
